[package]
name = "slippybot"
version = "0.1.0"
authors = ["Kevin Rauwolf <kevin@fgsake.org>"]

[dependencies]
slack = "*"
regex = "*"
log = "*"
env_logger = "*"
cron = { git = "https://github.com/zslayton/cron.git" }
chrono = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
rand = "*"
error-chain = "*"
